# u3vdb

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
libusb_win/: CMakeLists.txt  Makefile.am  config.h  core.c  descriptor.c  emscripten_webusb.cpp  events_windows.c  hotplug.c  io.c  libusb.h  libusbi.h  strerror.c  sync.c  version.h  version_nano.h  windows_common.c  windows_usbdk.c  windows_winusb.c
libusb_win/os/: darwin_usb.h  events_posix.h  linux_usbfs.h  threads_posix.h  threads_windows.h  windows_common.h  windows_winusb.h
